globus-gridftp-server (7.16-1+gt6.@distro@) @distro@; urgency=low

  * don't attempt to get retransmit count on http transfer

 -- Globus Toolkit <support@globus.org>  Sun, 16 Nov 2014 14:43:44 -0600

globus-gridftp-server (7.15-1+gt6.@distro@) @distro@; urgency=low

  * Remove reference to Globus::Core::Paths

 -- Globus Toolkit <support@globus.org>  Mon, 10 Nov 2014 16:15:13 -0500

globus-gridftp-server (7.14-1+gt6.@distro@) @distro@; urgency=low

  * Fix logging of IPv6 address

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 14:55:55 -0500

globus-gridftp-server (7.13-1+gt6.@distro@) @distro@; urgency=low

  * GT-477: Tracking TCP retransmits on the GridFTP server

 -- Globus Toolkit <support@globus.org>  Tue, 28 Oct 2014 17:11:45 -0500

globus-gridftp-server (7.12-1+gt6.@distro@) @distro@; urgency=low

  * Add missing dependencies
  * Quiet some autoconf/automake warnings
  * Fix some typos in help messages

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 15:16:51 -0400

globus-gridftp-server (7.11-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:30 -0400

globus-gridftp-server (7.10-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:40 -0400

globus-gridftp-server (7.10-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:44 -0400

globus-gridftp-server (7.10-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:45 -0400

globus-gridftp-server (7.9-2+gt6.@distro@) @distro@; urgency=low

  * Set localstatedir in configure invocation to /var

 -- Globus Toolkit <support@globus.org>  Wed, 04 June 2014 11:12:40 -0400

globus-gridftp-server (7.9-1+gt6.@distro@) @distro@; urgency=low

  * Use globus_libc_unsetenv
