@@ -1,3 +1,9 @@
+globus-gridftp-server (7.17-1+gt6.@distro@) @distro@; urgency=low
+
+  * Fix share file creation errors on bad fuse filesystems.
+
+ -- Globus Toolkit <support@globus.org>  Fri, 05 Dec 2014 14:40:20 -0600
+
 globus-gridftp-server (7.16-1+gt6.@distro@) @distro@; urgency=low
 
   * don't attempt to get retransmit count on http transfer
